--- a/gtmp3.cfg
+++ b/gtmp3.cfg
@@ -44,7 +44,7 @@ MEMORY {
 
 SEGMENTS {
     HEADER:   load = HEADER,         type = ro;
-    TAGDATA:  load = PRG,            type = ro,  define = yes;
+    TAGDATA:  load = PRG,            type = ro,  define = yes, optional = yes;
     CODE:     load = PRG,            type = ro,  define = yes;
     RODATA:   load = PRG,            type = ro,  define = yes;    
     STARTUP:  load = PRG,            type = ro,  define = yes;
