--- a/gtmp3.cfg
+++ b/gtmp3.cfg
@@ -9,7 +9,7 @@ MEMORY {
 
     # INES Cartridge Header
 
-    RAWHEADER: start = $0, size = $10, file = %O ,fill = yes;
+    HEADER: start = $0, size = $10, file = %O ,fill = yes;
 
     # 2 16K ROM Banks
     # - startup
@@ -43,7 +43,7 @@ MEMORY {
 }
 
 SEGMENTS {
-    HEADER:   load = HEADER,         type = ro;
+    RAWHEADER:   load = HEADER,         type = ro;
     TAGDATA:  load = PRG,            type = ro,  define = yes, optional = yes;
     CODE:     load = PRG,            type = ro,  define = yes;
     RODATA:   load = PRG,            type = ro,  define = yes;    
