changing to CHR-RAM

--- a/gtmp3.cfg
+++ b/gtmp3.cfg
@@ -9,6 +9,7 @@ MEMORY {
 
     # INES Cartridge Header
 
+    FAKEHEADER: start = $0, size = $10, fill = yes;
     HEADER: start = $0, size = $10, file = %O ,fill = yes;
 
     # 2 16K ROM Banks
@@ -44,6 +45,7 @@ MEMORY {
 
 SEGMENTS {
     RAWHEADER:   load = HEADER,         type = ro;
+    HEADER:   load = FAKEHEADER,    type = ro;
     TAGDATA:  load = PRG,            type = ro,  define = yes, optional = yes;
     CODE:     load = PRG,            type = ro,  define = yes;
     RODATA:   load = PRG,            type = ro,  define = yes;    
