--- a/gtmp3.cfg
+++ b/gtmp3.cfg
@@ -9,7 +9,7 @@ MEMORY {
 
     # INES Cartridge Header
 
-    FAKEHEADER: start = $0, size = $10, fill = yes;
+    FAKEHEADER: start = $0, size = $10, file = "", fill = yes;
     HEADER: start = $0, size = $10, file = %O ,fill = yes;
 
     # 2 16K ROM Banks
