--- a/gtmp3.cfg
+++ b/gtmp3.cfg
@@ -30,7 +30,7 @@ MEMORY {
 
     # 1 8K CHR Bank
 
-    CHR: start = $0000, size = $2000, file = %O, fill = yes;
+    #CHR: start = $0000, size = $2000, file = %O, fill = yes;
 
     # standard 2K SRAM (-zeropage)
     # $0100 famitone, palette, cpu stack
@@ -49,14 +49,14 @@ SEGMENTS {
     TAGDATA:  load = PRG,            type = ro,  define = yes, optional = yes;
     CODE:     load = PRG,            type = ro,  define = yes;
     RODATA:   load = PRG,            type = ro,  define = yes;    
+    CHARS:    load = PRG,            type = ro;
     STARTUP:  load = PRG,            type = ro,  define = yes;
     LOWCODE:  load = PRG,            type = ro,                optional = yes;
     ONCE:     load = PRG,            type = ro,  optional = yes;
-    INIT:     load = PRG,            type = ro,  define = yes, optional = yes;
+    INIT:     load = PRG,            type = ro,  define = yes, optional = yes;    
     DATA:     load = PRG, run = RAM, type = rw,  define = yes;
     VECTORS:  load = VECTORS,        type = rw;
     SAMPLES:  load = DMC,            type = rw;
-    CHARS:    load = CHR,            type = rw;
     BSS:      load = RAM,            type = bss, define = yes;
     HEAP:     load = RAM,            type = bss, optional = yes;
     ZEROPAGE: load = ZP,             type = zp;
