--- a/gtmp3.cfg
+++ b/gtmp3.cfg
@@ -17,8 +17,16 @@ MEMORY {
     # - code
     # - rodata
     # - data (load)
+    
+    PRG0: start = $8000, size= $4000, file = %O, fill = yes, define = yes;
+    PRG1: start = $8000, size= $4000, file = %O, fill = yes, define = yes;
+    PRG2: start = $8000, size= $4000, file = %O, fill = yes, define = yes;
+    PRG3: start = $8000, size= $4000, file = %O, fill = yes, define = yes;
+    PRG4: start = $8000, size= $4000, file = %O, fill = yes, define = yes;
+    PRG5: start = $8000, size= $4000, file = %O, fill = yes, define = yes;
+    PRG6: start = $8000, size= $4000, file = %O, fill = yes, define = yes;
 
-    PRG: start = $8000, size = $7f00, file = %O ,fill = yes, define = yes;
+    PRG: start = $C000, size = $3f00, file = %O ,fill = yes, define = yes;
 
     # DPCM Samples at end of the ROM
 
@@ -46,7 +54,13 @@ MEMORY {
 SEGMENTS {
     RAWHEADER:   load = HEADER,         type = ro;
     HEADER:   load = FAKEHEADER,    type = ro;
-    TAGDATA:  load = PRG,            type = ro,  define = yes, optional = yes;
+    TAGDATA0: load = PRG0,            type = ro,  define = yes, optional = yes;
+    TAGDATA1: load = PRG1,            type = ro,  define = yes, optional = yes;
+    TAGDATA2: load = PRG2,            type = ro,  define = yes, optional = yes;
+    TAGDATA3: load = PRG3,            type = ro,  define = yes, optional = yes;
+    TAGDATA4: load = PRG4,            type = ro,  define = yes, optional = yes;
+    TAGDATA5: load = PRG5,            type = ro,  define = yes, optional = yes;
+    TAGDATA6: load = PRG6,            type = ro,  define = yes, optional = yes;
     CODE:     load = PRG,            type = ro,  define = yes;
     RODATA:   load = PRG,            type = ro,  define = yes;    
     CHARS:    load = PRG,            type = ro;
